--- a/README
+++ b/README
@@ -1,10 +1,10 @@
-CONRAD
+CONRAD Steckdosen:
 1 ON 5510485 OFF 5510484
 2 ON 5522773 OFF 5522772
 3 ON 5525845 OFF 5525844
 4 ON 5526613 OFF 5526612
 
-POLLIN
+POLLIN Steckdosen:
 1 ON 1066321 OFF 1066324
 2 ON 1069393 OFF 1069396
 3 ON 1070161 OFF 1070164
